@@ -193,7 +193,7 @@ static jint JNICALL NativeRunAtariProgram(JNIEnv *env, jobject this,
 		CARTRIDGE_DIAMOND_64_DESC,
 		CARTRIDGE_SDX_64_DESC,
 		CARTRIDGE_XEGS_32_DESC,
-		CARTRIDGE_XEGS_64_DESC,
+		CARTRIDGE_XEGS_07_64_DESC,
 		CARTRIDGE_XEGS_128_DESC,
 		CARTRIDGE_OSS_M091_16_DESC,
 		CARTRIDGE_5200_NS_16_DESC,
@@ -246,7 +246,8 @@ static jint JNICALL NativeRunAtariProgram(JNIEnv *env, jobject this,
 		CARTRIDGE_MEGA_4096_DESC,
 		CARTRIDGE_MEGA_2048_DESC,
 		CARTRIDGE_THECART_32M_DESC,
-		CARTRIDGE_THECART_64M_DESC
+		CARTRIDGE_THECART_64M_DESC,
+		CARTRIDGE_XEGS_8F_64_DESC
 	};
 
 	const jbyte *img_utf = NULL;
